Tests for header summary

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,17 @@
 <h2><%= @book.title %></h2>
 
+<div class="summary">
+    <div class="highest-header">
+      
+    </div>
+    <div class="average-header">
+
+    </div>
+    <div class="lowest-header">
+
+    </div>
+</div>
+
 <ul>
   <% @reviews.each do |review| %>
     <li>
